# HW_9_python_web

./: README.md  pyproject.toml
hw_9/: authors.json  scrapy.cfg
hw_9/hw_9/: items.py  middlewares.py  pipelines.py  quotes.json  requests.seen  settings.py
hw_9/hw_9/spiders/: quotes_crawler.py
hw_9/saving_to_cloud_db/: config.ini  connect.py  main.py  models.py  seeds.py
